// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser multiplicative expressions parses left-associative division chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 19,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 7,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "isReserved": false,
          "kind": 10,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "/",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 3,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 10,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "/",
      },
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative integer-division chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 19,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 32.5,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "isReserved": false,
          "kind": 12,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "\\\\",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 3,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 12,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "\\\\",
      },
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative modulo chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 19,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 7,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "isReserved": false,
          "kind": 11,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "MOD",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 3,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 11,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "MOD",
      },
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative multiplication chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 19,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 3,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "isReserved": false,
          "kind": 9,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "*",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 7,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 9,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "*",
      },
    },
  },
]
`;
